Bug 1447563 - Clear video outputs during shutdown. r=padenot

MozReview-Commit-ID: L1ZnhmxrPqa